gitops/manifests/media/qbittorrent/qbittorrent.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: qbittorrent
  namespace: media
  labels:
    app: qbittorrent
    app.kubernetes.io/name: qbittorrent
spec:
  replicas: 1
  selector:
    matchLabels:
      app: qbittorrent
  template:
    metadata:
      labels:
        app: qbittorrent
        app.kubernetes.io/name: qbittorrent
    spec:
      nodeSelector:
          kubernetes.io/hostname: stuart 
      securityContext:
        runAsUser: 323  #all processes in the pod run with user ID 321
        runAsGroup: 321  # same but for groups
        fsGroup: 321 # owner of attached volume is group 321 
      containers:
        - name: qbittorrent
          image: ghcr.io/hotio/qbittorrent:release-5.1.2
          securityContext:
            runAsUser: 0  # Temporary root for setup, not great, but does not work otherwise
            allowPrivilegeEscalation: true
          imagePullPolicy: Always
          ports:
          - containerPort: 8080 
          resources:
            requests:
              memory: "2Gi"  
              cpu: "50m"      
            limits:
              memory: "3Gi"  
              cpu: "500m"
          volumeMounts:
            - mountPath: /config 
              name: config-storage
            - mountPath: /data # In UI add /downloads/torrents
              name: media-storage
      volumes:
        - name: config-storage
          persistentVolumeClaim:
            claimName: pvc-qbittorrent-config 
        - name: media-storage
          persistentVolumeClaim:
            claimName: pvc-media
---
apiVersion: v1
kind: Service
metadata:
  name: qbittorrent
  namespace: media
  labels:
    app.kubernetes.io/name: qbittorrent
spec:
  selector:
    app: qbittorrent
  ports:
  - name: http
    port: 80 # we talk to this
    protocol: TCP
    targetPort: 8080 # app listens here
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: qbittorrent
  labels:
    app: qbittorrent
    app.kubernetes.io/name: qbittorrent
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/proxy-body-size: "10m"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "1000"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "1000"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "1000"
    nginx.ingress.kubernetes.io/proxy-next-upstream-timeout: "1000"
spec:
  ingressClassName: nginx
  rules:
  - host: qbittorrent.${DOMAIN_NAME}
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: qbittorrent
            port:
              number: 80
  tls:
  - hosts:
      - qbittorrent.${DOMAIN_NAME}
    secretName: letsencrypt-wildcard-cert-pengiuns.com-production
